# endpoint-identity-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.hermes/: publication-policy.yml
.hermes/checklists/: 2026-05-22-lane-1-validation.md  2026-05-22-lane-2-validation.md  2026-05-22-lane-3-validation.md  2026-05-22-lane-4-validation.md  2026-05-22-lane-5-validation.md  2026-05-22-lane-6-validation.md  2026-05-22-lane-7-validation.md  2026-05-23-lane-8-validation.md  development-cycle.md  production-readiness.md  public-github-review.md  public-release-readiness.md  validation-log-template.md
.hermes/plans/: 2026-05-21-container-lane.md  2026-05-21-template-public-readiness-hardening-validation.md  2026-05-22-endpoint-identity-control-plane-design-spec.md  2026-05-22-lane-1-scaffold-hardening-plan.md  2026-05-22-lane-3-risk-engine-plan.md  2026-05-22-lane-4-api-endpoints-plan.md  README.md  (+6 more)
docs/: api.md  architecture.md  branch-protection.md  change-management.md  development.md  portfolio-narrative.md  public-repo-file-policy.md  publication-runbook.md  security-posture.md  testing.md  threat-model.md
scripts/: export_static_demo.py
site/: app.js  demo-data.json  index.html  styles.css
tests/: test_api_endpoints.py  test_container_config.py  test_demo_data.py  test_health.py  test_operations_demo.py  test_risk.py  test_static_demo.py
(+22 files in other folders)
