[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-identity-control-plane"
version = "0.1.0"
description = "A portfolio-grade FastAPI lab for endpoint and identity risk scoring using synthetic data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<6",
  "httpx>=0.28,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "bandit[toml]>=1.7,<2.0",
  "pip-audit>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
endpoint_identity_control_plane = ["data/demo/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
  "S101", # assert is expected in tests
]

# Public-facing quality ratchet:
# Before release, evaluate adding D, ANN, SIM, C4, RET, ARG, and RUF.
# Turn these on only after the project has useful docstrings and a realistic path to passing them.
# Use: python -m ruff check src tests --select D,ANN,N,PL,ARG,SIM,C4,RET,TRY --preview
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.bandit]
exclude_dirs = ["tests"]
